--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.6.4",
     "antd-img-crop": "^4.12.2",
     "axios": "^1.4.0",
+    "firebase": "^10.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
