--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd-img-crop": "^4.12.2",
     "axios": "^1.4.0",
     "firebase": "^10.3.1",
+    "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
