--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.9.0",
     "antd-img-crop": "^4.12.2",
     "axios": "^1.4.0",
+    "crypto-js": "^4.1.1",
     "firebase": "^10.3.1",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
